# some-paste

./: .travis.yml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yaml  docker-compose.yml  package.yaml  some-paste.cabal  stack.yaml  upload.sh  wait-for-postgres.sh
app/: Main.hs
src/: Db.hs  Highlight.hs  NordSyntax.hs  Serve.hs  Templates.hs  Web.hs
test/: Spec.hs
webserver/: Dockerfile  site.conf
