name:                some-paste
version:             0.1.0.0
synopsis: Simple code paste service using Postgres as a backend
homepage:            https://github.com/nitros12/some-paste#readme
license:             BSD3
license-file:        LICENSE
author:              ben simms
maintainer:          ben@bensimms.moe
copyright:           MIT
category:            paste
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Db
                     , Highlight
                     , Templates
                     , Serve
  build-depends:       base >= 4.7 && < 5
                     , skylighting >= 0.3
                     , postgresql-simple >= 0.5
                     , opaleye >= 0.5
                     , product-profunctors >= 0.8
                     , blaze-html >= 0.9
                     , time >= 1.6
                     , text-format >= 0.3
                     , clay >= 0.12
                     , containers >= 0.5
                     , mtl >= 2.2
                     , resource-pool >= 0.2
                     , scotty >= 0.11
                     , envy >= 1.3
                     , text
                     , xxhash
                     , http-types
  default-language:    Haskell2010

executable some-paste-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , postgresql-simple >= 0.5
                     , scotty >= 0.11
                     , wai-extra >= 3.0
                     , resource-pool >= 0.2
                     , data-default-class >= 0.1
                     , directory >= 1.3
                     , bytestring >= 0.10
                     , wai-middleware-throttle >= 0.2
                     , mtl >= 2.2
                     , envy >= 1.3
                     , text-format >= 0.3
                     , text
                     , some-paste
                     , warp
                     , wai
                     , http-types
  default-language:    Haskell2010

test-suite some-paste-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , postgresql-simple >= 0.5
                     , scotty >= 0.11
                     , http-types >= 0.9
                     , resource-pool >= 0.2
                     , mtl >= 2.2
                     , envy >= 1.3
                     , text
                     , some-paste
                     , wai
                     , hspec
                     , hspec-wai
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nitros12/some-paste
